crates/toml/tests/snapshots/invalid/string/multiline-no-close-02.stderr
TOML parse error at line 1, column 7
  |
1 | x="""
  |       ^
invalid multi-line basic string, expected `"`
